# gwas-compress-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.txt  configure  run.sh
.github/workflows/: compress.yml
data/: c1-r10-tab.tsv  c10-r1-tab.tsv  c10-r10-space.tsv  c10-r11-tab.tsv  c10r10.tsv  c5-r10-space.tsv  c5-r10-tab.tsv
include/: configReader.h  firstHalfHeader.h  funnelFormat.h  funnelFormatCompress.h  headerPart1.h  utils.h
src/: configReader.cpp  firstHalfHeader.cpp  funnelFormat.cpp  funnelFormat.h  funnelFormatCompress.cpp  funnelFormatCompress.h  funnel_format.cpp  funnel_format.h  gwasFile.cpp  gwasFile.h  gzip.cpp  gzip.h  gzipWrapper.cpp  gzipWrapper.h  gzip_wrapper.cpp  gzip_wrapper.h  headerPart1.cpp  header_first_half.cpp  header_first_half.h  main.cpp  utils.cpp  utils.h
test/: Makefile  TestCompressMain.cpp  TestHeaderPart1.cpp  TestHeaderPart1.h  TestUtils.cpp  TestUtils.h  UtilsTest.cpp  compressTest.cpp  main.cpp  test_gzipWrapper.cpp  test_main.cpp  test_utils.cpp  utilsTest.cpp
test/boost_tests/: Makefile  test_gzipWrapper.cpp  test_utils.cpp  tests
test/boost_tests/tests.dSYM/Contents/Resources/DWARF/: tests
